Release 1.0.36